# rpctest

./: CMakeLists.txt  Dockerfile
.devcontainer/: Dockerfile
proto/: my.proto
src/: main.cpp
src/capnproto/: CMakeLists.txt  client.cpp  myservice.capnp  server.cpp
src/grpc/: CMakeLists.txt  client.cpp  server.cpp
